univention-management-console-frontend (0.0.85-1) unstable; urgency=low  .    * umc.widgets.SearchForm: no right alignment of buttons    * umc.widgets.LabelPane: fix for an undefined label value    * fix <p>-margins and adapt umc.widgets.LoginDialog    (Bug #22461)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@25534 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/style.css
+++ b/management/univention-management-console-frontend/css/style.css
@@ -16,6 +16,11 @@ html, body
 	background: url('../images/mainBackground.png') repeat-x 0px 0px;
 }
 
+p {
+	margin-top: 0em;
+	margin-bottom: 0.5em;
+}
+
 /* define properties for floating buttons with margins */
 div.modLaunchButton {
 	width: 130px !important;
